<resources>
    <string name="app_name">Magna Wave</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="company">Company</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="co_password">Confirm Password</string>
    <string name="organ_name">Name</string>
    <string name="organ_description">Description</string>
    <string name="Organ_Name_is_required">Name is required!</string>
    <string name="Organ_description_is_required">Description is required!</string>
    <string name="Image_is_not_available">Image is not available!</string>
    <string name="email_is_required">Email is required!</string>
    <string name="name_is_required">Name is required!</string>
    <string name="match">Confirm password does not match!</string>
    <string name="address_is_required">Address is required!</string>
    <string name="password_is_required">Password is required!</string>
    <string name="password_is_required_6">Password length 6 is required!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="NO_INTERNET_CONNECTION">No Internet Connection</string>
    <string name="First_name_is_required">First name is required!</string>
    <string name="Last_name_is_required">Last name is required!</string>
    <string name="Company_is_required">Company is required!</string>
    <string name="phone_no_is_required">Phone number is required!</string>
    <string name="Pat_name_is_required">Name is required!</string>
    <string name="invalid_phone">Phone number is require at least 10 characters!</string>
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">about %d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>
    <string name="address">Address</string>
    <string name="Name">Name</string>
</resources>
