<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@mipmap/titlebar">

            <com.jlouistechnology.magnawave.Fonts.TextView_bld
                android:id="@+id/txt_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="UPDATE CLIENT"
                android:gravity="center"
                android:layout_gravity="center"
                android:singleLine="true"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:visibility="visible" />

        </RelativeLayout>

        <ImageView android:id="@+id/img_client"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/profile_icon"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:padding="1dp"
            android:background="@drawable/circle_border"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

          >

            <com.jlouistechnology.magnawave.Fonts.TextView_Regular
                android:id="@+id/txt_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/grey"
                android:visibility="invisible"
                />
            <com.jlouistechnology.magnawave.Fonts.Edittext_Regular
                android:id="@+id/edt_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:imeOptions="actionNext"
                android:gravity="left|center_vertical"
                android:textColor="@color/dark_blue"
               android:textSize="14sp"
                android:visibility="visible"
                android:inputType="textCapSentences"
                android:hint="@string/first_name"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/grey"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                android:background="@color/dark_blue"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            >

            <com.jlouistechnology.magnawave.Fonts.TextView_Regular
                android:id="@+id/txt_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/grey"
                android:visibility="invisible"
                />
            <com.jlouistechnology.magnawave.Fonts.Edittext_Regular
                android:id="@+id/edt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:imeOptions="actionNext"
                android:gravity="left|center_vertical"
                android:textColor="@color/dark_blue"
                android:textSize="14sp"
                android:visibility="visible"
                android:inputType="textCapSentences"
                android:hint="@string/last_name"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/grey"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                android:background="@color/dark_blue"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            >

            <com.jlouistechnology.magnawave.Fonts.TextView_Regular
                android:id="@+id/txt_companyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/grey"
                android:visibility="invisible"
                />
            <com.jlouistechnology.magnawave.Fonts.Edittext_Regular
                android:id="@+id/edt_companyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:imeOptions="actionNext"
                android:gravity="left|center_vertical"
                android:textColor="@color/dark_blue"
                android:textSize="14sp"
                android:visibility="visible"
                android:inputType="textCapSentences"
                android:hint="@string/company"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/grey"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                android:background="@color/dark_blue"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            >

            <com.jlouistechnology.magnawave.Fonts.TextView_Regular
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/grey"
                android:visibility="invisible"
                />
            <com.jlouistechnology.magnawave.Fonts.Edittext_Regular
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:imeOptions="actionNext"
                android:gravity="left|center_vertical"
                android:textColor="@color/dark_blue"
                android:textSize="14sp"
                android:visibility="visible"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/grey"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                android:background="@color/dark_blue"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            >

            <com.jlouistechnology.magnawave.Fonts.TextView_Regular
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/grey"
                android:visibility="invisible"
                />
            <com.jlouistechnology.magnawave.Fonts.Edittext_Regular
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:imeOptions="actionNext"
                android:gravity="left|center_vertical"
                android:textColor="@color/dark_blue"
                android:textSize="14sp"
                android:visibility="visible"
                android:inputType="textCapSentences"
                android:hint="@string/address"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/grey"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                android:background="@color/dark_blue"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            >

            <com.jlouistechnology.magnawave.Fonts.TextView_Regular
                android:id="@+id/txt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/grey"
                android:visibility="invisible"
                />
            <com.jlouistechnology.magnawave.Fonts.Edittext_Regular
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:imeOptions="actionDone"
                android:gravity="left|center_vertical"
                android:textColor="@color/dark_blue"
               android:textSize="14sp"
                android:visibility="visible"
                android:inputType="number"
                android:maxLength="13"
                android:hint="@string/phone_number"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/grey"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                android:background="@color/dark_blue"
                />
        </LinearLayout>

        <com.jlouistechnology.magnawave.Fonts.TextView_bld
            android:id="@+id/txtdone"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:text="Update"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_blue_curve" />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</layout>